--- a/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
+++ b/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,21 +16,22 @@
     "from support.pd_support import *\n",
     "from support.calculations_support import *\n",
     "from support.mecanum_calculations import *\n",
-    "from support.ar_calculations import *"
+    "from support.ar_calculations import *\n",
+    "import multiprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\sk16_15_quad_fast'"
+       "'c:\\\\Users\\\\Sujith\\\\Documents\\\\Projects\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\sk16_15_quad_fast'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +39,7 @@
    "source": [
     "_parent_folder = \"multi_cam_nov_14\"\n",
     "_folder_name = \"sk16_15_quad_fast\"\n",
-    "_calib_filename = \"calibration1\"\n",
+    "_calib_filename = \"calibration_15fps_quad\"\n",
     "\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\")\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,24 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "camera matrix [[1.04950220e+03 0.00000000e+00 4.69429477e+02]\n",
-      " [0.00000000e+00 1.05438245e+03 3.16160990e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "distortion [[-1.16719121e-01  1.17748891e+00  7.34794238e-03  2.34002449e-03\n",
-      "  -6.07996129e+00]]\n"
+      "camera matrix [[868.26070009   0.         372.25985418]\n",
+      " [  0.         874.44598128 238.35209445]\n",
+      " [  0.           0.           1.        ]]\n",
+      "distortion [[ 7.07394532e-02 -3.42419375e-02 -1.86205766e-03  8.20734788e-04\n",
+      "  -4.82051694e+00]]\n"
      ]
     }
    ],
    "source": [
     "#calibration path\n",
-    "_webcam_calib_pth = os.path.join(_calib_pth, \"kinect_calibration.msgpack\")\n",
+    "_webcam_calib_pth = os.path.join(_calib_pth, \"webcam_calibration.msgpack\")\n",
     "\n",
     "#open the calibration files\n",
     "with open(_webcam_calib_pth, \"rb\") as f:\n",
@@ -95,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def iter_analysis(_pth, _webcam_cam_mat, _webcam_dist):\n",
     "    #webcam path\n",
-    "    _webcam_video_pth = os.path.join(_pth, \"kinect_color.msgpack\")\n",
+    "    _webcam_video_pth = os.path.join(_pth, \"webcam_color.msgpack\")\n",
     "\n",
     "    #timestamp path\n",
-    "    _webcam_timestamp_pth = os.path.join(_pth, \"kinect_timestamp.msgpack\")\n",
+    "    _webcam_timestamp_pth = os.path.join(_pth, \"webcam_timestamp.msgpack\")\n",
     "    _w_df = get_ar_pose_data(_webcam_video_pth, _webcam_cam_mat, _webcam_dist, is_color=False, single_file=True, flip_frame=True)\n",
     "    _w_df = add_time_from_file(_w_df, _webcam_timestamp_pth)\n",
     "    # get percentage of nan values\n",
@@ -116,52 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\CMC\\anaconda3\\envs\\gs\\lib\\site-packages\\ipykernel_launcher.py:10: RuntimeWarning: invalid value encountered in longlong_scalars\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n"
+      "cores 4\n"
      ]
     }
    ],
+   "source": [
+    "# available cores\n",
+    "print(\"cores\", multiprocessing.cpu_count())\n",
+    "# maximum threads\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# read foldernames from txt file\n",
     "with open(_txt_pth, \"r\") as f:\n",
@@ -171,41 +148,42 @@
     "# create a dataframe to store the data\n",
     "df = pd.DataFrame(columns = [\"folder_name\", \"total_frames\", \"missing_frames\", \"percentage_missing\"])\n",
     "\n",
+    "\"\"\"\n",
+    "These are the list of data to accquire\n",
+    "\"\"\"\n",
+    "\n",
     "# loop through the folders\n",
     "_per_missing = []\n",
     "_total_frame_list = []\n",
     "_missing_frame_list = []\n",
-    "for i in _folder_list:\n",
-    "    _tmp_pth = os.path.join(_base_pth, _parent_folder, i)\n",
+    "fps_val = []\n",
+    "speed_val = []\n",
+    "quad_val = []\n",
+    "\n",
+    "\"\"\"\n",
+    "Thread function\n",
+    "\"\"\"\n",
+    "\n",
+    "def thread_fun(_folder_name):\n",
+    "    _tmp_pth = os.path.join(_base_pth, _parent_folder, _folder_name)\n",
     "    _p, _t, _m = iter_analysis(_tmp_pth, _webcam_cam_mat, _webcam_dist)\n",
     "    _per_missing.append(_p)\n",
     "    _total_frame_list.append(_t)\n",
-    "    _missing_frame_list.append(_m)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check fps value\n",
-    "fps_val = []\n",
-    "for i in _folder_list:\n",
-    "    fps_val.append(int(i.split(\"_\")[1]))\n",
-    "\n",
-    "# check speed of movement\n",
-    "speed_val = []\n",
-    "for i in _folder_list:\n",
-    "    speed_val.append(i.split(\"_\")[3])\n",
-    "\n",
-    "# check if quad or skateboard\n",
-    "quad_val = []\n",
-    "for i in _folder_list:\n",
-    "    if i.split(\"_\")[2] == \"quad\":\n",
+    "    _missing_frame_list.append(_m)\n",
+    "    \n",
+    "    # check fps value\n",
+    "    fps_val.append(int(_folder_name.split(\"_\")[1]))\n",
+    "    # check speed of movement\n",
+    "    speed_val.append(_folder_name.split(\"_\")[3])\n",
+    "    # check if quad or skateboard\n",
+    "    if _folder_name.split(\"_\")[2] == \"quad\":\n",
     "        quad_val.append(\"quad\")\n",
     "    else:\n",
-    "        quad_val.append(\"skateboard\")\n"
+    "        quad_val.append(\"skateboard\")\n",
+    "\n",
+    "with multiprocessing.Pool() as pool:\n",
+    "    pool.map(thread_fun, _folder_list)\n",
+    "\n"
    ]
   },
   {
@@ -358,7 +336,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('gs')",
+   "display_name": "mira",
    "language": "python",
    "name": "python3"
   },
@@ -372,12 +350,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+    "hash": "5e150188acfe9ffecc9060698e0419ffeeaf23b924b6dc14c3c2ca6e878e68e6"
    }
   }
  },
