--- a/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
+++ b/ipy_notebooks/percentage_missing_in_ar_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,41 +16,44 @@
     "from support.pd_support import *\n",
     "from support.calculations_support import *\n",
     "from support.mecanum_calculations import *\n",
-    "from support.ar_calculations import *"
+    "from support.ar_calculations import *\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\sk16_15_quad_fast'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_dec_14\\\\sk16_15_quad_fast'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_parent_folder = \"multi_cam_nov_14\"\n",
+    "_parent_folder = \"single_cam_dec_14\"\n",
     "_folder_name = \"sk16_15_quad_fast\"\n",
-    "_calib_filename = \"calibration1\"\n",
+    "_calib_filename = \"calibration_15fps_00\"\n",
     "\n",
     "_base_pth = os.path.dirname(os.getcwd())\n",
     "_base_pth = os.path.join(_base_pth, \"recording_programs\", \"test_data\")\n",
     "\n",
     "_pth = os.path.join(_base_pth, _parent_folder, _folder_name)\n",
     "_calib_pth = os.path.join(_base_pth, _parent_folder, _calib_filename)\n",
+    "\n",
+    "_video_file_name = \"webcam_calibration.msgpack\"\n",
     "_pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +73,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "camera matrix [[1.04950220e+03 0.00000000e+00 4.69429477e+02]\n",
-      " [0.00000000e+00 1.05438245e+03 3.16160990e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "distortion [[-1.16719121e-01  1.17748891e+00  7.34794238e-03  2.34002449e-03\n",
-      "  -6.07996129e+00]]\n"
+      "camera matrix [[849.43873573   0.         378.35322323]\n",
+      " [  0.         853.41209121 275.1212578 ]\n",
+      " [  0.           0.           1.        ]]\n",
+      "distortion [[ 1.66526383e-01 -2.60179534e+00  1.38678267e-02  8.40570240e-03\n",
+      "   1.01675108e+01]]\n"
      ]
     }
    ],
    "source": [
     "#calibration path\n",
-    "_webcam_calib_pth = os.path.join(_calib_pth, \"kinect_calibration.msgpack\")\n",
+    "_webcam_calib_pth = os.path.join(_calib_pth, _video_file_name)\n",
     "\n",
     "#open the calibration files\n",
     "with open(_webcam_calib_pth, \"rb\") as f:\n",
@@ -95,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def iter_analysis(_pth, _webcam_cam_mat, _webcam_dist):\n",
     "    #webcam path\n",
-    "    _webcam_video_pth = os.path.join(_pth, \"kinect_color.msgpack\")\n",
+    "    _webcam_video_pth = os.path.join(_pth, _video_file_name.split(\"_\")[0] + \"_color.msgpack\")\n",
     "\n",
     "    #timestamp path\n",
-    "    _webcam_timestamp_pth = os.path.join(_pth, \"kinect_timestamp.msgpack\")\n",
+    "    _webcam_timestamp_pth = os.path.join(_pth, _video_file_name.split(\"_\")[0] + \"_timestamp.msgpack\")\n",
     "    _w_df = get_ar_pose_data(_webcam_video_pth, _webcam_cam_mat, _webcam_dist, is_color=False, single_file=True, flip_frame=True)\n",
     "    _w_df = add_time_from_file(_w_df, _webcam_timestamp_pth)\n",
     "    # get percentage of nan values\n",
@@ -120,45 +123,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\CMC\\anaconda3\\envs\\gs\\lib\\site-packages\\ipykernel_launcher.py:10: RuntimeWarning: invalid value encountered in longlong_scalars\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
+      "  5%|▍         | 3/66 [00:12<04:32,  4.33s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n",
-      "returning dataframe\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20636\\3728399990.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_folder_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0m_tmp_pth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_base_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_parent_folder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0m_p\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_m\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0miter_analysis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_tmp_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_cam_mat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_dist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[0m_per_missing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_p\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0m_total_frame_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20636\\3805793988.py\u001b[0m in \u001b[0;36miter_analysis\u001b[1;34m(_pth, _webcam_cam_mat, _webcam_dist)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m#timestamp path\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0m_webcam_timestamp_pth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_video_file_name\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"_timestamp.msgpack\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_ar_pose_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_webcam_video_pth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_cam_mat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_dist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_color\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msingle_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0m_w_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0madd_time_from_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_w_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_webcam_timestamp_pth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# get percentage of nan values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mget_ar_pose_data\u001b[1;34m(_pth, cameraMatrix, distCoeffs, process_raw, is_color, single_file, flip_frame, _pth_to_save, print_display)\u001b[0m\n\u001b[0;32m    171\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mflip_frame\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    172\u001b[0m                 \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 173\u001b[1;33m             \u001b[0mrotation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtranslation_vectors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mestimate_ar_pose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcameraMatrix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcameraMatrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdistCoeffs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdistCoeffs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mar_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mar_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    174\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    175\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mids\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\ipy_notebooks\\..\\support\\generate_ar_data.py\u001b[0m in \u001b[0;36mestimate_ar_pose\u001b[1;34m(frame, cameraMatrix, distCoeffs, is_color, ar_params, ar_dict, board)\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;31m# ARUCO_PARAMETERS, ARUCO_DICT, board = camera_parameters()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m     \u001b[0mcorners\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrejectedImgPoints\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maruco\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMarkers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mARUCO_DICT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mARUCO_PARAMETERS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[1;31m# Refine detected markers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -175,7 +157,7 @@
     "_per_missing = []\n",
     "_total_frame_list = []\n",
     "_missing_frame_list = []\n",
-    "for i in _folder_list:\n",
+    "for i in tqdm(_folder_list):\n",
     "    _tmp_pth = os.path.join(_base_pth, _parent_folder, i)\n",
     "    _p, _t, _m = iter_analysis(_tmp_pth, _webcam_cam_mat, _webcam_dist)\n",
     "    _per_missing.append(_p)\n",
